pig-game/assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
  --color-sun-primary: #f39c12;
  --color-sun-secondary: #ffff00;
  --color-sun-third: #f35512;
}

html {
  font-size: 62.5%;
  box-sizing: border-box;
}

body {
  font-family: 'Nunito', sans-serif;
  font-weight: 400;
  height: 100vh;
  color: #333;
  /* background-image: linear-gradient(to top, #88deb0b4 0%, #405252d2 60%); */
  background-image: radial-gradient(
    ellipse at center,
    #f5feea 0%,
    #f5feea 35%,
    #b7e8eb 100%
  );
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* LAYOUT */
main {
  position: absolute;
  width: 100rem;
  height: 60rem;
  background-color: rgba(255, 255, 255, 0.1);
  opacity: 0.9;
  backdrop-filter: blur(200px);
  filter: blur();
  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
  border-radius: 50px;
  overflow: hidden;
  display: flex;
}

.player {
  flex: 50%;
  padding: 9rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  transition: all 0.75s;
}

/* ELEMENTS */
.name {
  position: relative;
  font-size: 4rem;
  text-transform: uppercase;
  letter-spacing: 1px;
  word-spacing: 2px;
  font-weight: 300;
  margin-bottom: 1rem;
}

.score {
  font-size: 8rem;
  font-weight: 300;
  color: #00ff95;
  margin-bottom: auto;
}

.player--active {
  background-color: rgba(255, 255, 255, 0.9);
}
.player--active .name {
  font-weight: 700;
}
.player--active .score {
  font-weight: 400;
}

.player--active .current {
  opacity: 1;
}

.current {
  background-color: #00ff95b4;
  opacity: 0.8;
  border-radius: 9px;
  color: #fff;
  width: 65%;
  padding: 2rem;
  text-align: center;
  transition: all 0.75s;
  box-shadow: 0 0rem 5rem rgba(0, 0, 0, 0.25);
}

.current-label {
  text-transform: uppercase;
  margin-bottom: 1rem;
  font-size: 1.7rem;
  color: #fff;
}

.current-score {
  font-size: 3.5rem;
}

/* ABSOLUTE POSITIONED ELEMENTS */
.btn {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  color: #444;
  background: none;
  border: none;
  font-family: inherit;
  font-size: 1.8rem;
  text-transform: uppercase;
  cursor: pointer;
  font-weight: 400;
  transition: all 0.2s;

  background-color: white;
  background-color: rgba(255, 255, 255, 0.6);
  backdrop-filter: blur(10px);

  padding: 0.7rem 2.5rem;
  border-radius: 50rem;
  box-shadow: 0 0rem 3.5rem rgba(0, 0, 0, 0.25);
}

.btn::first-letter {
  font-size: 2.4rem;
  display: inline-block;
  margin-right: 0.7rem;
}

.btn--new {
  top: 4rem;
}
.btn--roll {
  top: 39.3rem;
}
.btn--hold {
  top: 46.1rem;
}

.btn:active {
  transform: translate(-50%, 3px);
  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
}

.btn:focus {
  outline: none;
}

.dice {
  position: absolute;
  left: 50%;
  top: 16.5rem;
  transform: translateX(-50%);
  height: 10rem;
  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
}

.player--winner {
  background-color: #2f2f2f;
}

.player--winner .name {
  font-weight: 700;
  color: #00ff95;
}
.hidden {
  display: none;
}
.sun {
  height: 80px;
  width: 80px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%);
  border-radius: 50%;
  background: var(--color-sun-third);
  box-shadow: 0px 0px 15px var(--color-sun-third),
    0px 0px 15px var(--color-sun-third);
  z-index: -1;
  animation: anime1 10s linear forwards;
}
@keyframes anime1 {
  0% {
    top: 60%;
    box-shadow: 0px 0px 30px var(--color-sun-third),
      0px 0px 100px var(--color-sun-third);
    background: var(--color-sun-third);
  }
  50% {
    top: 30%;
    box-shadow: 0px 0px 70px var(--color-sun-primary),
      0px 0px 200px var(--color-sun-primary);
    background: var(--color-sun-primary);
  }
  100% {
    top: 5%;
    background: var(--color-sun-secondary);
    box-shadow: 0px 0px 100px var(--color-sun-secondary),
      0px 0px 300px var(--color-sun-secondary);
  }
}
.dark1 {
  position: absolute;
  left: 0px;
  top: 0px;
  height: 100%;
  width: 100%;
  z-index: 1;
  background: rgba(13, 19, 24, 1);
  animation: anime2 10s linear forwards;
}
@keyframes anime2 {
  0% {
    background: rgba(13, 19, 24, 1);
  }
  100% {
    background: rgba(13, 19, 24, 0);
  }
}
.container {
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}
.sky {
  width: 100vw;
  height: 50vh;
}
.waves {
  width: 100vw;
  max-height: 70vh;
}
.path-0 {
  animation: pathAnim-0 8s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}
/* ... */

